[package]
name = "mainframe"
version = "0.1.0"
edition = "2018"
description = "Mainframe - manage infrastructure with a few button clicks"
homepage = "https://github.com/realaravinth/mainframe"
repository = "https://github.com/realaravinth/mainframe"
documentation = "https://github.com/realaravinth/mainframe"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]
build = "build.rs"
default-run = "mainframe"

[[bin]]
name = "mainframe"
path = "./src/main.rs"

[[bin]]
name = "migrate"
path = "./src/migrate.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.7", features = [ "runtime-actix-native-tls", "sqlite", "macros", "migrate"]}
tokio = { version = "1.10.1", features = ["time", "fs", "net", "process"] }
actix-rt = "2.2.0"
nix = "0.22.1"


chrono = "0.4.19"

serde = { version = "1", features = ["derive"]}
serde_json = "1"

lazy_static = "1.4"
rand = "0.8"

pretty_env_logger = "0.4"
log = "0.4"

config = "0.11"

url = "2.2.2"

[build-dependencies]
chrono = "0.4.19"
